--- a/styles/MovieDetail.module.scss
+++ b/styles/MovieDetail.module.scss
@@ -1,22 +1,79 @@
-.container{
+.container {
     width: 100%;
     height: 100%;
-}/*
-.container:before {
-    content: "";
-    position: absolute;
-    width : 100%;
+}
+.containerBackground {
+    width: 100%;
     height: 100%;
-    background: inherit;
-    z-index: -1;
+    filter: blur(30px);
+    z-index: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 
-    filter        : blur(10px);
-    -moz-filter   : blur(10px);
-    -webkit-filter: blur(10px);
-    -o-filter     : blur(10px);
+.movieInfo {
+    .infoColumn{
+        width: 33%;
+    }
+}
+.basicInfo {
+    display: flex;
+    flex-direction: row;
+    padding-top: 50px;
+    .imageContainer {
+        .image {
+            margin-left: 50px;
+            max-width: 500px;
+        }
+    }
+    .details {
+        margin: 0px 10px;
+        .detailsText {
+            color: white;
+            font-weight: bold;
+            font-family: Arimo, Arial, Helvetica, "Lucida Grande", sans-serif;
+            margin: 10px;
+        }
+        .title {
+            font-size: 50px;
+        }
+        .year {
+            font-size: 20px;
+        }
 
-    transition        : all 2s linear;
-    -moz-transition   : all 2s linear;
-    -webkit-transition: all 2s linear;
-    -o-transition     : all 2s linear;
-}*/
+        .rating {
+            display: flex;
+            flex-direction: column;
+        }
+        .genresList {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            font-size: 20px;
+
+            .genreListItem {
+                margin: 0;
+
+                &:not(:first-child) {
+                    &::before {
+                        content: "/";
+                        margin:0px 5px;
+                    }
+                }
+            }
+        }
+    }
+    .similarMovies{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .similarMoviesItem{
+            width: 100px;
+            margin: 5px;
+            width: 45%;
+            height: fit-content;
+        }
+    }
+}
