--- a/styles/MovieDetail.module.scss
+++ b/styles/MovieDetail.module.scss
@@ -1,3 +1,4 @@
+@import "general.scss";
 .container {
     width: 100%;
     height: 100%;
@@ -12,23 +13,141 @@
     top: 0;
 }
 
-.movieInfo {
-    .infoColumn{
-        width: 33%;
+.movieInfo {    
+    .infoColumn {
+        width: 100%;
     }
 }
+
 .basicInfo {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding-top: 50px;
+    .imageDetailsContainer {
+        display: flex;
+    }
     .imageContainer {
-        .image {
+        display: none;
+        margin: 20px;
+       /* .image {
             margin-left: 50px;
             max-width: 500px;
-        }
+        }*/
     }
     .details {
         margin: 0px 10px;
+        width: 100%;
+    }
+    .detailsText {
+        color: white;
+        font-weight: bold;
+        font-family: Arimo, Arial, Helvetica, "Lucida Grande", sans-serif;
+        margin: 10px;
+    }
+    .title {
+        font-size: 50px;
+    }
+    .year {
+        font-size: 20px;
+    }
+
+    .rating {
+        display: flex;
+        flex-direction: column;
+    }
+    .genresList {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        font-size: 20px;
+
+        .genreListItem {
+            margin: 0;
+
+            &:not(:first-child) {
+                &::before {
+                    content: "/";
+                    margin: 0px 5px;
+                }
+            }
+        }
+    }
+    .movieMedia {
+        width: 100%;
+
+        .imagesTitle {
+            font-size: 30px;
+        }
+        .movieMediaContainer {
+            width: 100%;
+        }
+    }
+    .movieMediaImages {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;   
+        justify-content: center;   
+
+        .movieMediaImageContainer {            
+            width: 26%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 5px 0px;
+            .movieMediaImage {
+                width: 100px;
+                height: auto;
+            }
+        }
+    }
+    .movieMediaTrailerContainer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .trailerTitle {
+            font-size: 30px;
+        }
+    }
+}
+
+@include breakpoint(min-laptop) {
+
+    .basicInfo{
+        flex-direction: row;
+        .movieMediaImages {
+            .movieMediaImageContainer {    
+                .movieMediaImage {
+                    width: 80%;
+                    height: auto;
+                }
+            }
+        }
+    }
+   
+}
+
+@include breakpoint(min-desktop) {
+    .basicInfo {
+        display: flex;
+        flex-direction: row;
+        padding-top: 50px;
+        .imageDetailsContainer {
+            display: flex;
+            
+
+        }
+        .imageContainer {
+            display: block;
+            width: 50%;
+        };
+        }
+        .details {
+            margin: 0px 10px;
+            width: 100%;
+        }
         .detailsText {
             color: white;
             font-weight: bold;
@@ -41,7 +160,7 @@
         .year {
             font-size: 20px;
         }
-
+    
         .rating {
             display: flex;
             flex-direction: column;
@@ -52,28 +171,43 @@
             display: flex;
             flex-direction: row;
             font-size: 20px;
-
+    
             .genreListItem {
                 margin: 0;
-
+    
                 &:not(:first-child) {
                     &::before {
                         content: "/";
-                        margin:0px 5px;
+                        margin: 0px 5px;
                     }
                 }
             }
         }
-    }
-    .similarMovies{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        .similarMoviesItem{
-            width: 100px;
-            margin: 5px;
-            width: 45%;
-            height: fit-content;
+        .movieMedia {
+            .imagesTitle {
+                font-size: 30px;
+            }
+            .movieMediaContainer {
+                width: 100%;
+            }
         }
-    }
+        .movieMediaImages {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;      
+    
+            .movieMediaImageContainer {            
+                width: 33%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 5px 0px;
+                .movieMediaImage {
+                    width: 80% !important;
+                    height: auto;
+                }
+            }
+        }
 }
+
