Fixing build errors #4 and final I hope

--- a/styles/MovieDetail.module.scss
+++ b/styles/MovieDetail.module.scss
@@ -109,6 +109,8 @@
         align-items: center;
         .trailerTitle {
             font-size: 30px;
+            text-align: left;
+            width: 100%;
         }
     }
 }
