--- a/styles/Navigation/Navbar.module.scss
+++ b/styles/Navigation/Navbar.module.scss
@@ -1,4 +1,5 @@
-@import "general.scss";
+@import "../Global/general.scss";
+
 //***************************Header***************************//
 
 .header {
