--- a/styles/Global/Content.module.scss
+++ b/styles/Global/Content.module.scss
@@ -1,13 +1,12 @@
 @import "general.scss";
 
 .main {
-    position: absolute;
-
-    
+    position: absolute;    
     width: 100%;
     height: 100%;
     background: gray;
     overflow-x: hidden;
+    padding: 0 9%;
 }
 .movable{
     position: relative;
