--- a/styles/Global/Header.module.scss
+++ b/styles/Global/Header.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    right: 12%;
   }
   .heading {
     background: #808080;
