--- a/styles/ReviewList/Review.module.scss
+++ b/styles/ReviewList/Review.module.scss
@@ -1,7 +1,6 @@
 @import "../Global/general.scss";
 
 .review {
-    width: 70%;
     background: $base-color;
     color: $tertiary-color;
     border: 1px solid black;
@@ -15,6 +14,7 @@
     overflow: hidden;
     cursor: pointer;
     transition: all .5s ease-in-out;
+    margin: 10px;
 }
 .open{
     height: auto !important;
