--- a/styles/Global/Content.module.scss
+++ b/styles/Global/Content.module.scss
@@ -4,9 +4,11 @@
     position: absolute;    
     width: 100%;
     height: 100%;
-    background: gray;
+    background-image: url("../../public/479017288a229d836f44.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     overflow-x: hidden;
-    padding: 0 9%;
+
 }
 .movable{
     position: relative;
