--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,3 +9,20 @@
 
 }
 
+.heading{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .title{
+    font-size: 40px;
+    font-weight: bolder;
+    color: $secondary-color;
+  }
+  .subHeading{
+    width: 60%;
+    color: white;
+    text-align:center;
+  }
+}
+
