--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -20,9 +20,38 @@
     color: $secondary-color;
   }
   .subHeading{
+    margin: 20px;
     width: 60%;
-    color: white;
+    color: $tertiary-color;
     text-align:center;
+    font-size: 20px;
+    line-height: 35px;
   }
+  .seperator{
+    margin: 20px 0;
+    width:45%;
+    height:1px;
+    border:0;
+    border-bottom: 1px solid rgba(255,255,255,.25);
+  }
+}
+
+.upcomingSection{
+  width: 60%;
+  .upcomingMovies{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-around;
+  }
+  
+}
+
+.subTitle{
+  font-size: 35px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
 }
 
