--- a/styles/Global/globals.scss
+++ b/styles/Global/globals.scss
@@ -37,3 +37,10 @@ a {
 .css-e4w4as-MuiFormLabel-root-MuiInputLabel-root{
   color: $tertiary-color !important;
 }
+.css-1rwt2y5-MuiButtonBase-root-MuiButton-root{
+  color: $secondary-color !important;
+  border-color: $secondary-color !important;
+}
+.react-multi-carousel-list{
+  overflow: visible !important;
+}
