--- a/styles/Global/Content.module.scss
+++ b/styles/Global/Content.module.scss
@@ -4,7 +4,7 @@
     position: absolute;    
     width: 100%;
     height: 100%;
-    background-image: url("../../public/479017288a229d836f44.png");
+    background-image: url("../../public/479017288a229d836f44.webp");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     overflow-x: hidden;
