--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: flex-start;
     }
     .searchListItem{
         margin: 10px;        
