--- a/styles/ActorList/ActorList.module.scss
+++ b/styles/ActorList/ActorList.module.scss
@@ -1,20 +1,6 @@
 @import "../Global/general.scss";
 .actorList {
-  margin: 20px 0px 55px 15px;
   width: 100%;
-}
-.mactor {
-  margin: auto;
-  background: #8c8;
-  counter-increment: gallery-cell;
-  &:before {
-    display: block;
-    text-align: center;
-    content: counter(gallery-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;
-  }
 }
 .header {
   position: relative;
@@ -30,16 +16,6 @@
     font-weight: bold;
     text-align: center;
   }
-  .arrowsContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-bottom: 20px;
-    .arrow {
-      cursor: pointer;
-      margin: 0px 5px;
-    }
-  }
   .heading {
     color: white;
   }
@@ -53,7 +29,7 @@
   .header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:flex-start;
     .headerContainer {
       display: flex;
       flex-direction: column;
@@ -64,20 +40,4 @@
       text-align: left;
     }
   }
-  
-  .arrowsContainer {
-    position: sticky;
-    right: 0;
-    top: 122px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center !important;
-    margin-bottom: 20px;
-    transition: all .3s ease-in-out;
-    .arrow {
-      cursor: pointer;
-      margin: 0px 5px;
-    }
-  }
-
 }
