--- a/styles/ReviewList/Review.module.scss
+++ b/styles/ReviewList/Review.module.scss
@@ -1,47 +1,80 @@
 @import "../Global/general.scss";
 
 .review {
-    background: $base-color;
-    color: $tertiary-color;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 5px 5px 5px -3px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 5px 5px 5px -3px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 5px 5px 5px -3px rgba(0, 0, 0, 0.75);
-    max-height: 300px;
-    margin-bottom: 30px;
-    overflow: hidden;
-    cursor: pointer;
-    transition: all .5s ease-in-out;
-    margin: 10px;
-}
-.open{
-    height: auto !important;
-    max-height: 2000px;
-}
-.reviewHeader{
-    display: flex;
-    justify-content: space-between;
-}
-.reviewDetails {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    height: auto;   
+    position: relative;
+    //right: 15px;
     margin-bottom: 10px;
-    font-weight: bold;
+    padding: 20px;
+    background: rgba(0,0,0,0.2);
+    box-shadow: 0 3px 6px 0 rgb(0 0 0 / 15%);
+    border-radius: 5px;
+    cursor: pointer;
+    .reviewContainer {
+        .reviewContent {
+            padding-bottom: 20px;
+            .reviewContentContainer{
+                max-height: 200px;
+                overflow: hidden;
+                transition: max-height 1s ease-in-out
+                
+            }
+            .reviewOpen{
+                max-height: 400px;
+                transition: max-height 1s ease-in-out
+            }
+            .contentText {
+                color: white;
+                
+            }
+        }
+        .reviewFooter{
+            .reviewSeperator{
+                margin: 20px 0;
+                width: 100%;
+                height: 1px;
+                border: 0;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+            }
+            .footerContent{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+            }
+        }
+        .reviewData {
+            color: $tertiary-color;
+        }
+        .headerTop {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 25px;
+            .headerTitle {
+                color: $secondary-color;
+                font-weight: bold;
+                font-size: 20px;
+            }
+            .headerRating {
+                display: flex;
+                flex-direction: row; 
+                justify-content:center;           
+                color: $tertiary-color;
+                align-items: center;
+                .starIcon{
+                    color: $secondary-color !important;
+                }
+            }
+        }
+        .headerBottom {
+            
+            margin-bottom: 25px;
+        }
+    }
+    .reviewOpen{
+    
+    }
+  
 }
-.reviewRating{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.reviewAuthor {
-    color: $secondary-color;
-    margin: 0;
-}
-.reviewDate{
-    font-size: 10px;
-    color:$tertiary-color
-}
+
