--- a/styles/ReviewList/ReviewList.module.scss
+++ b/styles/ReviewList/ReviewList.module.scss
@@ -1,21 +1,6 @@
 @import "../Global/general.scss";
-
 .reviewList {
-  margin: 20px 0px 55px 15px;
   width: 100%;
-}
-.review {
-  margin: auto;
-  background: #8c8;
-  counter-increment: gallery-cell;
-  &:before {
-    display: block;
-    text-align: center;
-    content: counter(gallery-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;
-  }
 }
 .header {
   position: relative;
@@ -29,18 +14,10 @@
     margin-bottom: 10px;
     font-family: Arimo, Arial, Helvetica, "Lucida Grande", sans-serif;
     font-weight: bold;
-    text-align: center;
+    
+    text-align: left;
   }
-  .arrowsContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-bottom: 20px;
-    .arrow {
-      cursor: pointer;
-      margin: 0px 5px;
-    }
-  }
+
   .heading {
     color: white;
   }
@@ -54,53 +31,15 @@
   .header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     .headerContainer {
       display: flex;
       flex-direction: column;
-      margin-left: 25px;
       margin-bottom: 10px;
       font-family: Arimo, Arial, Helvetica, "Lucida Grande", sans-serif;
       font-weight: bold;
-      text-align: left;
+      text-align: right;
+      padding-right: 15px;
     }
   }
-  
-  .arrowsContainer {
-    position: sticky;
-    right: 0;
-    top: 122px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center !important;
-    margin-bottom: 20px;
-    transition: all .3s ease-in-out;
-    .arrow {
-      cursor: pointer;
-      margin: 0px 5px;
-    }
-  }
-
 }
-
-/*.arrows{
-      display: block;
-  }
-  .arrowsContainer{
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-      margin-bottom: 20px;
-  }
-
-  .arrow{
-      cursor: pointer;
-      margin: 0px 10px;
-  }
-  .arrowLeft{
-    display: block;
-  }
-  .arrowRight{
-    display: block;
-  }
-  */
