--- a/styles/MediaList/MediaList.module.scss
+++ b/styles/MediaList/MediaList.module.scss
@@ -36,6 +36,7 @@
     flex-direction: row;
     justify-content: flex-end;
     margin-bottom: 20px;
+    align-items:center;
     .arrow {
       cursor: pointer;
       margin: 0px 5px;
@@ -43,6 +44,7 @@
   }
   .heading {
     color: white;
+    cursor: pointer;
   }
 
   .subHeading {
