Added sidebar decorations

--- a/styles/Global/globals.scss
+++ b/styles/Global/globals.scss
@@ -44,3 +44,6 @@ a {
 .react-multi-carousel-list{
   overflow: visible !important;
 }
+.css-ny5bw0-MuiButtonBase-root-MuiSwitch-switchBase.Mui-checked+.MuiSwitch-track {
+  background-color: $secondary-color !important;
+}
