--- a/styles/Navigation/Sidebar.module.scss
+++ b/styles/Navigation/Sidebar.module.scss
@@ -28,22 +28,28 @@
     list-style-type: none;
     padding: 0;
     width: 100%;
-
-    .sidebarLink {
-        height: fit-content;
-        min-height: 50px;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        justify-content: center;
-        padding-top: 10px;
-        width: 200px;
-        margin: 10px 0;
-        transition: all 0.5s ease-in-out;
+    .sidebarListItem{
+        display:block;
         &:hover {
             cursor: pointer;
             background: rgba($color: $tertiary-color, $alpha: 0.1);
         }
+    }
+ 
+    .sidebarListItemActive{
+        border-left: 3px solid $secondary-color;
+    }
+
+    .sidebarLink {
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        justify-content: center;
+        padding: 5px 0;
+        width: 200px;
+        margin: 10px 0;
+        transition: all 0.5s ease-in-out;
         .singleLinkSpacer{
             visibility: hidden;
         }
@@ -99,6 +105,7 @@
         margin-top: 10px;
         .sidebarDropdownLinks {
             list-style: none;
+            margin: 0;
             .sidebarDropdownLink {
                 color: $tertiary-color;
                 height: 30px;
@@ -114,10 +121,20 @@
 .sidebarSearch {
     margin-left: 0;
     transition: all 0.5s;
+    .searchOrder{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        .order{
+            span{
+                color: $tertiary-color;
+            }
+        }
+    }
+   
 }
 .sidebarSearchActive {
     margin-left: 10px !important;
-    width: 100% !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -175,27 +192,15 @@
     visibility: hidden;
     opacity: 0;
 }
+.localeActive{
+    color: $secondary-color !important;
+}
 
 @include breakpoint(min-tablet) {
 
     
     .sidebarLink {
-        height: fit-content;
-        min-height: 50px;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        justify-content: center;
-        padding-top: 10px;
         width: 100% !important;
-        margin: 10px 0px ;
-        &:hover {
-            cursor: pointer;
-            background: rgba($color: $tertiary-color, $alpha: 0.1);
-        }
-        .singleLinkSpacer{
-            visibility: hidden;
-        }
     }
     
     .sidebarLinkMainOpen {
@@ -203,9 +208,6 @@
        
     }
     .sidebarSearchActive {
-        margin-left: 10px;
-        width: 100% !important;
-        display: flex;
         justify-content: flex-start;
         align-items: flex-start;
         &:hover{
