--- a/styles/Navigation/Sidebar.module.scss
+++ b/styles/Navigation/Sidebar.module.scss
@@ -121,6 +121,7 @@
 .sidebarSearch {
     margin-left: 0;
     transition: all 0.5s;
+    width: 100% !important;
     .searchOrder{
         display: flex;
         flex-direction: row;
