--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content:center;
     }
     .searchListItem{
         margin: 10px;        
@@ -25,3 +25,10 @@
     }
 }
 
+@include breakpoint(min-laptop) {
+    .searchList{
+          .searchListContainer{
+              justify-content:  flex-start;
+          }
+      }
+}
